--- a/Calculators/Water_intake_Calculator/styles.css
+++ b/Calculators/Water_intake_Calculator/styles.css
@@ -3,6 +3,26 @@
     padding: 0;
     word-wrap: break-word;
 }
+
+input[type="text"] {
+    text-align: center;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  padding: 2px;
+  border-radius: 20px;
+  font-size: 20px;
+  color: rgb(230, 74, 222);
+}
+
+input[type="submit"] {
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  border-radius: 10px;
+  font-size: 20px;
+  color: rgb(120, 63, 205);
+  width: 10vw;
+  margin-bottom: 5vw;
+  padding: 0.3vw;
+}
+
 .background{
     display: flex;
     height: 100vh;
@@ -31,14 +51,25 @@
 }
 
 .component_grid{
+    border: 2px solid red;
+    display: flex;
+    flex-direction: row;
     position: absolute;
-    width: 20vw;
+    justify-content:flex-start;
+    /* justify-items: flex-start; */
+    /* align-items:stretch; */
+
+    width: 60vw;
     /* height: 30vw; */
     top: 30vh;
     left: 17vw;
     font-size: 2vw;
 }
 
-.form{
-
+.result_section{
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0vw 2vw 0px 2vw;
+    margin:  0vw 4vw 0px 4vw;
+    border: 2px solid red;
 }
